# video-link-pipeline

./: .env  .gitignore  LICENSE  README.en.md  README.md  config.yaml  convert_subtitle.py  download_video.py  generate_summary.py  index.md  parallel_transcribe.py  pyproject.toml  requirements.txt  test.txt  www.kuaishou.com_cookies.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  web-local-dev-plan.md  web-ui-design.md
scripts/: check.ps1  dev-web.ps1  install_deps.sh  sync-skill.ps1
skills/video-link-pipeline/: SKILL.md
skills/video-link-pipeline/agents/: openai.yaml
skills/video-link-pipeline/references/: commands.md  config.md  diagnostics.md  manifest.md  test-cases.md
src/video_link_pipeline/: __init__.py  __main__.py  cli.py  config.py  doctor.py  errors.py  logging.py  manifest.py
src/video_link_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/video_link_pipeline/download/: __init__.py  cookie_login.py  cookies.py  diagnostics.py  selenium_fallback.py  service.py  yt_dlp_backend.py
src/video_link_pipeline/pipeline/: __init__.py  orchestrator.py
tests/: conftest.py  test_artifact_resolver.py  test_cli_cookies_login.py  test_cli_download_manifest.py  test_cli_run.py  test_cli_step_manifest.py  test_config.py  test_doctor.py  test_download_diagnostics.py  test_download_selenium.py  test_job_log.py  test_job_runner.py  test_job_scanner.py  test_manifest.py  test_subtitles_convert.py  test_web_api.py
web/: __init__.py
web/api/: __init__.py  deps.py  main.py
web/api/routes/: artifacts.py  cookies.py  (+4 more)
web/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+52 files in other folders)
